RESOLVED FIXED116919
Fix the firing of m_paintRelatedMilestonesTimer
https://bugs.webkit.org/show_bug.cgi?id=116919
Summary Fix the firing of m_paintRelatedMilestonesTimer
Simon Fraser (smfr)
Reported 2013-05-29 00:10:34 PDT
http://trac.webkit.org/changeset/150671 was incorrect, because we haven't actually painted in flushPendingLayerChanges().
Attachments
Patch (4.97 KB, patch)
2013-05-29 00:16 PDT, Simon Fraser (smfr)
no flags
Patch (5.78 KB, patch)
2013-05-29 08:55 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-05-29 00:11:15 PDT
Simon Fraser (smfr)
Comment 2 2013-05-29 00:16:00 PDT
EFL EWS Bot
Comment 3 2013-05-29 00:22:47 PDT
Early Warning System Bot
Comment 4 2013-05-29 00:24:09 PDT
Early Warning System Bot
Comment 5 2013-05-29 00:25:09 PDT
Build Bot
Comment 6 2013-05-29 00:26:32 PDT
EFL EWS Bot
Comment 7 2013-05-29 00:34:00 PDT
Build Bot
Comment 8 2013-05-29 00:53:10 PDT
kov's GTK+ EWS bot
Comment 9 2013-05-29 02:30:02 PDT
Simon Fraser (smfr)
Comment 10 2013-05-29 08:55:40 PDT
Tim Horton
Comment 11 2013-05-29 08:57:54 PDT
Comment on attachment 203204 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=203204&action=review > Source/WebCore/ChangeLog:14 > + will just dirty CALayers, and layer on Core Animation will ask us to paint them. layer on?
Simon Fraser (smfr)
Comment 12 2013-05-29 09:04:49 PDT
Note You need to log in before you can comment on or make changes to this bug.