Source/WebCore/rendering/RenderLayerCompositor.h
@@ -281,6 +281,8 @@ public:
 
     void setLayerFlushThrottlingEnabled(bool);
     void disableLayerFlushThrottlingTemporarilyForInteraction();
+    
+    void didPaintBacking(RenderLayerBacking*);
 
 private:
     class OverlapMap;
